Feat : Weball JS and CSS Added.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/weball.min.css">
 
     <script src="js/jquery-3.4.1.min.js" defer="true"></script>
     <script src="js/bootstrap.min.js" defer="true"></script>
     <script src="js/popper.min.js" defer="true"></script>
+    <script src="js/weball.min.js" defer="true"></script>
 
   </head>
   <body>
