Feat : Balls added.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,51 @@
   </head>
   <body>
 
+    <nav class="navbar navbar-expand-sm bg-warning">
+
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link 1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link 2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link 3</a>
+        </li>
+      </ul>
+
+    </nav>
+
+    <div class="container">
+      <div class="row">
+        TOP
+      </div>
+    </div>
+
+
+    <div class="container mt-4">
+      <div class="col-sm-12">
+
+        <div id="playground">
+
+          <div id="leftgoal" class="goal">
+            <div class="ball ball-a" draggable="true"></div>
+          </div>
+
+          <div id="rightgoal" class="goal">
+            <div class="ball ball-b" draggable="true"></div>
+          </div>
+
+
+        </div>
+
+      </div>
+    </div>
+
+
+
+
+
   </body>
 </html>
