--- a/index.html
+++ b/index.html
@@ -38,15 +38,21 @@
     <div class="container mt-4">
       <div class="col-sm-12">
 
-        <div id="playground">
+        <div id="playground" class="d-flex justify-content-between">
 
-          <div id="leftgoal" class="goal">
-            <div class="ball ball-a" draggable="true"></div>
+          <div id="homeLeft" class=" ">
+            <figure id="shoterLeft" class="goal"></figure>
           </div>
 
-          <div id="rightgoal" class="goal">
-            <div class="ball ball-b" draggable="true"></div>
+          <div id="centerLine" class="">
+
           </div>
+
+          <div id="homeRight" class="">
+            <figure id="shoterRight" class="goal"></figure>
+          </div>
+
+          <figure id="ball" class="circle"></figure>
 
 
         </div>
