Feat : Left Home

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div id="playground" class="d-flex justify-content-between">
 
-          <div id="homeLeft" class=" ">
+          <div id="homeLeft" class="home">
             <figure id="shoterLeft" class="goal"></figure>
           </div>
 
@@ -48,7 +48,7 @@
 
           </div>
 
-          <div id="homeRight" class="">
+          <div id="homeRight" class="home">
             <figure id="shoterRight" class="goal"></figure>
           </div>
 
