--- a/index.html
+++ b/index.html
@@ -41,18 +41,23 @@
         <div id="playground" class="d-flex justify-content-between">
 
           <div id="homeLeft" class="home">
-            <figure id="shoterLeft" class="goal"></figure>
+            <figure id="shooterLeft" class="goal">
+              <figure class="circle blue"></figure>
+            </figure>
           </div>
 
           <div id="centerLine" class="">
-
+            <figure id="ball-1" class="circle blue"></figure>
+            <figure id="ball-2" class="circle red"></figure>
           </div>
 
           <div id="homeRight" class="home">
-            <figure id="shoterRight" class="goal"></figure>
+            <figure id="shooterRight" class="goal">
+              <figure class="circle red"></figure>
+            </figure>
           </div>
 
-          <figure id="ball" class="circle"></figure>
+
 
 
         </div>
