--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="playground" class="d-flex justify-content-between">
 
           <div id="homeLeft" class="home">
-            <figure id="shooterLeft" class="goal">
+            <figure id="shooterLeft" class="shooter">
               <figure class="circle blue"></figure>
             </figure>
           </div>
@@ -52,7 +52,7 @@
           </div>
 
           <div id="homeRight" class="home">
-            <figure id="shooterRight" class="goal">
+            <figure id="shooterRight" class="shooter">
               <figure class="circle red"></figure>
             </figure>
           </div>
