--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
             </figure>
           </div>
 
-          <div id="centerLine" class="">
-            <figure id="ball-1" class="circle blue"></figure>
-            <figure id="ball-2" class="circle red"></figure>
+          <div id="lineLeft" class="centerLine">
+            <figure id="ball-1" class="circle red"></figure>
+          </div>
+
+          <div id="lineRight" class="centerLine">
+            <figure id="ball-2" class="circle blue"></figure>
           </div>
 
           <div id="homeRight" class="home">
