--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
         <div id="playground" class="d-flex justify-content-between">
 
-          <div id="homeLeft" class="home">
-            <figure id="shooterLeft" class="shooter">
+          <div id="homeLeft" class="home" data-side="Left">
+            <figure id="shooterLeft" class="shooter" data-side="Left">
               <figure class="circle blue"></figure>
             </figure>
           </div>
@@ -54,8 +54,8 @@
             <figure id="ball-2" class="circle red"></figure>
           </div>
 
-          <div id="homeRight" class="home">
-            <figure id="shooterRight" class="shooter">
+          <div id="homeRight" class="home" data-side="Right">
+            <figure id="shooterRight" class="shooter" data-side="Right">
               <figure class="circle red"></figure>
             </figure>
           </div>
