--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
           </div>
 
           <div id="lineRight" class="centerLine">
-            <figure id="ball-1" class="circle blue"></figure>
+            <figure id="ball-1" class="circle blue">2</figure>
           </div>
 
           <div id="lineLeft" class="centerLine">
-            <figure id="ball-2" class="circle red"></figure>
+            <figure id="ball-2" class="circle red">1</figure>
           </div>
 
           <div id="homeRight" class="home" data-side="Right">
