--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 
     <div class="container">
       <div class="row">
-        TOP
+        <div class="col-sm-12 text-center">
+          <br>
+          <h3 id="info"><h3>
+        </div>
       </div>
     </div>
 
